update video options rail layout

--- a/app/src/main/res/layout/video_options_rail_container.xml
+++ b/app/src/main/res/layout/video_options_rail_container.xml
@@ -8,7 +8,7 @@
     android:gravity="center_vertical"
     android:paddingHorizontal="@dimen/video_options_rail_container_margin_horizontal">
 
-    <LinearLayout
+    <HorizontalScrollView
         android:id="@+id/videoOptionsRail"
         android:layout_width="match_parent"
         android:layout_height="@dimen/video_options_rail_height"
@@ -16,19 +16,21 @@
         android:clipToOutline="true"
         android:gravity="center_vertical"
         android:visibility="invisible"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        android:overScrollMode="always"/>
 
     <FrameLayout
         android:id="@+id/btnVideoOptionsRailToggle"
-        android:layout_width="@dimen/video_options_rail_toggle_button_size"
-        android:layout_height="@dimen/video_options_rail_toggle_button_size"
+        android:layout_width="@dimen/video_options_rail_item_icon_size"
+        android:layout_height="@dimen/video_options_rail_item_icon_size"
         android:background="@drawable/overlay_background_dark"
+        android:layout_margin="@dimen/video_options_rail_toggle_margin"
         android:clipToOutline="true"
         android:layout_gravity="end">
 
         <ImageView
-            android:layout_width="@dimen/video_options_rail_item_icon_size"
-            android:layout_height="@dimen/video_options_rail_item_icon_size"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center" />
     </FrameLayout>
 
